[gd_scene load_steps=3 format=2]

[ext_resource path="res://Menu/Graphics/theme/MasterTheme.tres" type="Theme" id=1]
[ext_resource path="res://Menu/GameModeMenu/ModeButton.gd" type="Script" id=2]

[node name="ModeButton" type="Button"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 60.0
margin_bottom = 30.0
rect_min_size = Vector2( 324, 90 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 1
theme = ExtResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
script = ExtResource( 2 )
_sections_unfolded = [ "Textures" ]
modePath = ""
modeDescription = ""

[connection signal="focus_entered" from="." to="." method="onFocusEntered"]

[connection signal="focus_exited" from="." to="." method="onFocusExited"]

[connection signal="mouse_entered" from="." to="." method="onFocusEntered"]

[connection signal="mouse_exited" from="." to="." method="onFocusExited"]

[connection signal="pressed" from="." to="." method="onButtonPressd"]


